[package]
name = "miniproxy"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A lightweight SOCKS5 proxy"
repository = "https://github.com/apokryptein/miniproxy"
keywords = ["proxy", "socks", "socks5", "async", "io"]

[lib]
name = "miniproxy"
path = "src/lib.rs"

[[bin]]
name = "miniproxy"
path = "src/bin/miniproxy.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
