[package]
name = "soxide"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A lightweight SOCKS5 proxy"
homepage = "https://github.com/apokryptein/soxide"
repository = "https://github.com/apokryptein/soxide"
readme = "README.md"
keywords = ["proxy", "socks", "socks5", "async", "io"]

[lib]
name = "soxide"
path = "src/lib.rs"

[[bin]]
name = "soxide"
path = "src/bin/soxide.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
